--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chouquette-bet",
+  "name": "beerbet",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 3000",
@@ -38,6 +38,7 @@
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^0.40.7",
+    "vite-plugin-pwa": "^0.14.7"
   }
 }
