--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "vueIndentScriptAndStyle": true,
   "printWidth": 120,
   "arrowParens": "always",
+  "bracketSameLine": true,
   "htmlWhitespaceSensitivity": "ignore"
 }
