--- a/package.json
+++ b/package.json
@@ -8,37 +8,39 @@
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase": "supabase"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.4",
-    "pinia": "^2.0.21",
-    "primeicons": "^5.0.0",
-    "primevue": "^3.17.0",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.1.0",
-    "vue": "^3.2.38",
-    "vue-router": "^4.1.5",
-    "vue-spinner": "^1.0.4"
+    "pinia": "^2.0.35",
+    "sass": "^1.63.3",
+    "sass-loader": "^13.3.2",
+    "vue": "^3.2.47",
+    "@supabase/supabase-js": "^2.21.0",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^20.0.0",
-    "@types/node": "^16.11.56",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.15.11",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "eslint": "8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.0",
+    "dotenv": "^16.0.3",
+    "eslint": "8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.9",
-    "vitest": "^0.23.0",
+    "prettier": "^2.8.8",
+    "typescript": "~5.0.4",
+    "vite": "^3.2.7",
+    "vitest": "^0.32.0",
     "vue-tsc": "^0.40.7",
+    "supabase": "^1.11.4",
     "vite-plugin-pwa": "^0.14.7"
   }
 }
