--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue": "^3.2.47",
     "@supabase/supabase-js": "^2.32.0",
     "vue-router": "^4.1.6",
-    "vue-spinner": "^1.0.4"
+    "vue-spinner": "^1.0.4",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
