--- a/.github/workflows/cd_staging.yml
+++ b/.github/workflows/cd_staging.yml
@@ -1,9 +1,9 @@
-name: Deploy
+name: Deploy to Staging
 
 on:
   push:
     branches:
-      - main
+      - develop
     paths:
       - 'supabase/**'
   workflow_dispatch:
@@ -15,8 +15,8 @@ jobs:
 
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      PROJECT_ID: ${{ secrets.PROJECT_ID }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
+      STAGING_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v3
@@ -28,6 +28,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: |
-          npm run supabase -- link --project-ref $PROJECT_ID
+          npm run supabase -- link --project-ref $STAGING_PROJECT_ID
           npm run supabase -- db push
           npm run supabase -- functions deploy end-bet
