--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "beerbet",
-  "version": "0.0.0",
+  "name": "chouquette-bet",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "vite build",
+    "dev:emulator": "vite --port 3000 --mode=emulator",
+    "dev:staging": "vite --port 3000 --mode=staging",
+    "build": "run-p type-check build-only",
+    "build:staging": "run-p type-check build-only:staging",
     "preview": "vite preview --port 3000",
     "test:unit": "vitest --environment jsdom",
+    "test:e2e": "cypress run",
     "build-only": "vite build",
+    "build-only:staging": "vite build --mode=staging",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "supabase:start": "supabase start",
+    "supabase:function": "supabase functions serve end-bet --env-file .env.local",
     "supabase:stop": "supabase stop",
-    "supabase": "supabase"
+    "supabase": "supabase",
+    "cypress": "cypress",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "transform:choquette": "npx metamorphe transform choquette",
+    "save:choquette": "npx metamorphe save choquette"
   },
   "dependencies": {
+    "@onesignal/onesignal-vue3": "^1.0.2",
+    "@supabase/supabase-js": "^2.21.0",
     "browser-image-compression": "^2.0.2",
     "pinia": "^2.0.35",
     "primeicons": "^6.0.1",
@@ -21,10 +34,9 @@
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "vue": "^3.2.47",
-    "@supabase/supabase-js": "^2.32.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "vue-spinner": "^1.0.4",
-    "vue-i18n": "^9.2.2"
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
@@ -35,17 +47,19 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "cypress": "^12.13.0",
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "supabase": "^1.11.4",
     "typescript": "~5.0.4",
     "vite": "^3.2.7",
+    "vite-plugin-pwa": "^0.14.7",
+    "vite-plugin-sitemap": "^0.4.2",
     "vitest": "^0.32.0",
-    "vue-tsc": "^0.40.7",
-    "supabase": "^1.11.4",
-    "vite-plugin-pwa": "^0.14.7"
+    "vue-tsc": "^0.40.7"
   }
 }
