--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chouquette-bet",
-  "version": "0.1.0",
+  "name": "beerbet",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 3000",
     "dev:emulator": "vite --port 3000 --mode=emulator",
