--- a/crowdin.yml
+++ b/crowdin.yml
@@ -2,4 +2,4 @@ files:
   - source: /src/lang/locales/en.json
     translation: /src/lang/locales/%two_letters_code%.json
   - source: /templates/**/src/lang/locales/en.json
-    translation: templates/**/src/lang/locales/%two_letters_code%.json
+    translation: /templates/**/src/lang/locales/%two_letters_code%.json
